####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = swirly 

EXTRA_DIST = swirly.kdevprj AUTHORS COPYING INSTALL README TODO swirly.lsm ChangeLog 

####### kdevelop will overwrite this part!!! (end)############
# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4


